--- a/src/styles/sideNav.scss
+++ b/src/styles/sideNav.scss
@@ -1,6 +1,6 @@
 header {
   background-color: #6588cb;
-  height: 6vh;
+  height: 3em;
   line-height: 1em;
   position: relative;
   width: 100vw;
